--- a/src/components/auth/register/Register.module.css
+++ b/src/components/auth/register/Register.module.css
@@ -8,7 +8,7 @@
 }
 
 .form {
-    background-color: #2C2C3E;
+    background-color: #2a2a3b;
     color: #cca281;
     padding: 2.5rem 2rem;
     border-radius: 12px;
