--- a/src/pages/HomePage/components/Card.module.css
+++ b/src/pages/HomePage/components/Card.module.css
@@ -1,6 +1,6 @@
 .container {
     background-color: #2c2c3a;
-    color: #f5f5f5;
+    color: #cca281;
     text-decoration: none;
     padding: 1.5rem 2rem;
     border-radius: 12px;
@@ -17,5 +17,5 @@
 
 .container:hover {
     background-color: #3b3b4d;
-    transform: translateY(-4px  );
+    transform: translateY(-4px);
 }
